--- a/rai_service/Dockerfile
+++ b/rai_service/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
+RUN apt-get update && apt-get install -y libgomp1
+
+
 COPY . .
 
 CMD ["python", "app.py"]
